feat(tts): integrate OpenAI gpt-4o-mini-tts
- Add service backend/app/services/tts_openai.py using /v1/audio/speech
- New API: POST /api/tts with support for text, instructions, voice, speed,
  model, output_format, filename_base, auto_play, target_client_id
- Wire endpoint in backend/app/main.py and schema in models/schemas.py
- Config defaults: OPENAI_TTS_MODEL/VOICE/FORMAT in app/config.py
- Update sound files listing to include aac/flac
- Frontend: enable SoundPlayer by default (App.jsx) and improve autoplay
  behavior (SoundPlayer.jsx) with user-gesture retry prompt when blocked
- Docs: update API quick start and backend architecture for TTS usage and params

--- a/docs/system_architecture/後端架構概論.md
+++ b/docs/system_architecture/後端架構概論.md
@@ -13,6 +13,7 @@
   - 嵌入與搜尋：OpenAI Python SDK（text-embedding-3-small）、ChromaDB（PersistentClient）
   - 圖像生成：google-genai（Gemini API）
   - 音效生成：httpx（ElevenLabs Text-to-Sound Effects API）
+  - 旁白 TTS：httpx（OpenAI Audio Speech API）
   - 設定：python-dotenv；Pydantic v2（models/schemas.py）
 - 靜態掛載：
   - `/generated_images` → `settings.offspring_dir`
@@ -31,6 +32,7 @@ backend/app/
 │   ├── vector_store.py        # ChromaDB 整合與搜尋
 │   ├── image_analysis.py      # 圖像分析（OpenAI 視覺）
 │   ├── sound_effects.py       # 音效生成（ElevenLabs）
+│   ├── tts_openai.py         # 旁白 TTS（OpenAI Audio Speech）
 │   ├── screenshots.py         # 截圖上傳儲存
 │   ├── screenshot_requests.py # 截圖請求與 WebSocket 廣播
 │   ├── camera_presets.py      # 相機預設 CRUD
@@ -55,6 +57,7 @@ backend/app/
     - `MODEL_NAME`（預設 `gemini-2.5-flash-image-preview`）
     - `OPENAI_EMBEDDING_MODEL`（預設 `text-embedding-3-small`）
     - `OPENAI_VISION_MODEL`（預設 `gpt-4o-mini`）
+    - `OPENAI_TTS_MODEL`（預設 `gpt-4o-mini-tts`）, `OPENAI_TTS_VOICE`（預設 `alloy`）, `OPENAI_TTS_FORMAT`（預設 `mp3`）
     - `GOOGLE_EMBEDDING_MODEL`（`text-embedding-004`）、`GOOGLE_IMAGE_EMBEDDING_MODEL`（`multimodalembedding`，目前未啟用）
   - 目錄與檔案：
     - `GENES_POOL_DIR`（單一路徑，相容）
@@ -118,6 +121,13 @@ backend/app/
 ### 4.4 image_analysis.py / sound_effects.py（分析與音效）
 - 圖像分析：OpenAI `gpt-4o-mini` 生成 `summary` 與 `segments`
 - 音效生成：ElevenLabs `eleven_text_to_sound_v2`（`duration_seconds`, `prompt_influence`, `loop`, `output_format`）
+
+### 4.5 tts_openai.py（旁白 TTS）
+- 端點：`POST /api/tts`
+  - 請求：`{ text, instructions?, voice?, model?, output_format?, filename_base?, speed?, auto_play?, target_client_id? }`
+  - 行為：呼叫 OpenAI Audio Speech API → 寫入 `generated_sounds/` → 回傳 `{ tts: {...}, url }`
+  - 若 `auto_play=true`：透過 WebSocket 廣播 `sound_play` 給指定 `client_id`
+  - 可選：`speed`（0.25–4.0），控制語速（預設 1.0）；`instructions` 用於指定語氣/口音/說話風格
 - 綁定流程：
   - `POST /api/analyze-screenshot`
   - `POST /api/sound-effects`
@@ -232,4 +242,3 @@ backend/app/
 ---
 
 （文件結束）
-
