Refactor App with shared hooks and update architecture doc

--- a/docs/system_architecture/前端架構概論.md
+++ b/docs/system_architecture/前端架構概論.md
@@ -1,7 +1,7 @@
 # 前端架構概論（Frontend Architecture Overview）
 
 > 狀態: 與現況程式碼同步  
-> 最後更新: 2025-10-23
+> 最後更新: 2025-11-04
 
 ---
 
@@ -22,7 +22,7 @@
 
 ## 2. 目錄與關鍵檔案
 
-- `frontend/src/App.jsx`：入口與模式切換（依 URL 查詢參數）
+- `frontend/src/App.jsx`：入口與模式切換，負責組合各模式元件與 hooks
 - 模式元件（七種視覺化模式）
   - `frontend/src/ThreeKinshipScene.jsx`：
     - SceneContent（預設 3D 景觀）
@@ -36,6 +36,9 @@
   - `frontend/src/SoundPlayer.jsx`：透過 WS 接收 `sound_play` 訊息自動播放音效
   - `frontend/src/api.js`：封裝 API 呼叫（搜尋、親緣、上傳等）
   - `frontend/src/styles.css`：全域樣式
+- 協作用共用模組
+  - `frontend/src/hooks/`：跨模式共用的 React hooks（見 §5）
+  - `frontend/src/utils/iframeConfig.js`：Iframe 設定解析/正規化工具
 
 ---
 
@@ -57,6 +60,8 @@
 ---
 
 ## 4. 主要元件詳解
+
+> `App.jsx` 目前只處理「URL → 模式判斷 → 對應元件渲染」。其餘如字幕、截圖、iframe 配置、WebSocket 都委派給 hooks（§5）。
 
 ### 4.1 ThreeKinshipScene.jsx
 - 內含三個場景內容：
@@ -116,6 +121,48 @@
   - 親緣圖：`GET /api/kinship?img=...&depth=...`
   - 截圖上傳：`POST /api/screenshots`（回傳 `original_filename`, `absolute_path` 等）
 - 以 `VITE_API_BASE` 作為 Base URL，未指定時走相對路徑
+
+---
+
+## 5. 共用 Hooks 與工具（2025-11 版）
+
+為了讓 `App.jsx` 保持精簡、便於協作，以下功能已抽象成 hooks：
+
+- `useSubtitleCaption(clientId)` — `frontend/src/hooks/useSubtitleCaption.js`
+  - 初始載入 `fetchSubtitleState` / `fetchCaptionState`
+  - 正規化文字、語言、有效期間
+  - 依 `duration_seconds` 或 `expires_at` 自動清除，避免計時器散落於各元件
+  - 回傳 `{ subtitle, caption, applySubtitle, applyCaption }`
+
+- `useScreenshotManager(clientId)` — `frontend/src/hooks/useScreenshotManager.js`
+  - 管理 WebSocket 佇列、重入鎖、計時器與訊息提示
+  - 將 `window.__APP_CAPTURE_SCENE` 的註冊/清理與 screenshot API 上傳集中在一處
+  - 對外提供
+    - `handleCaptureReady(fn)`：子元件（`IframeMode`, `SlideMode`, `ThreeKinshipScene`）在就緒時註冊截圖函式
+    - `enqueueScreenshotRequest(payload)`：接收 WS `screenshot_request`
+    - `markRequestDone(requestId)`：當 `screenshot_completed|failed` 時解除鎖定
+    - `screenshotMessage`：給 UI 顯示狀態用
+
+- `useIframeConfig({ initialParams, iframeMode, clientId, defaultConfig })` — `frontend/src/hooks/useIframeConfig.js`
+  - 解析 URL 參數 → `sanitize` 成可用的面板設定
+  - 根據 `iframeMode` 控制遠端載入與本地 fallback
+  - 中央化 URL 同步邏輯（當 `PERSIST_IFRAME_QUERY=true` 時才寫回）
+  - 回傳 `{ iframeActiveConfig, iframeControlsEnabled, handleLocalIframeConfigApply, applyRemoteIframeConfig }`
+
+- `useControlSocket(options)` — `frontend/src/hooks/useControlSocket.js`
+  - 管理 WebSocket `/ws/screenshots`
+  - 內建重連機制（簡單的 2 秒重試）
+  - 依 `payload.type` 將事件分派給對應回呼：`screenshot_request`、`screenshot_completed|failed`、`sound_play`、`subtitle_update`、`caption_update`、`iframe_config`
+
+- 工具模組 `frontend/src/utils/iframeConfig.js`
+  - `parseIframeConfigFromParams` / `sanitizeIframeConfig` / `buildQueryFromIframeConfig`
+  - 移除重複 ID、補齊 col/row span、統一 ratio/gap/columns 的邏輯
+
+### 協作建議
+
+- 新增場景時，若需要截圖或字幕，只要調用上述 hooks，不需再複製 `App.jsx` 的老程式碼。
+- 若要擴充 WebSocket 事件，先在 `useControlSocket` 增加對應的 `payload.type`，再把回呼從 `App.jsx` 傳入。
+- App 若需更多狀態（例如未來的「視角預設」hook），沿用同樣模式：先在 `hooks/` 建立具體邏輯，再於 `App.jsx` 引入，保持主組件規模一致。
 
 ---
 
@@ -191,4 +238,3 @@
 ---
 
 （文件結束）
-
