Docs: extend 圖像系譜學.md with collage mode–appearance coupling, metrics, and protocol

--- a/圖像系譜學.md
+++ b/圖像系譜學.md
@@ -313,3 +313,82 @@ python3 backend/app/analysis/export_visuals_summary.py \
   - 解讀：第 2 代附近出現較強的方向性紋理（可能來自線性裝飾/構圖），深層又趨於均衡（滿版紋理化）。
 
 說明：上述為 PIL 快取版本（不依賴重型 FFT）；後續可在不影響工作流下，逐步擴展到全庫與更細緻的頻譜分析、圖案家族分群與場景原型分類。
+
+## 19. 拼貼（Collage Version）匹配模式與視覺耦合
+
+本階段加入多種切片匹配模式，目的在於「讓親緣元素於單張圖內重新編隊」，觀察語彙如何在微結構（tile 邊界）與宏結構（區塊）上形成可辨識的型態。所有模式均在 `backend/app/services/collage_version.py` 中實作，前端 `CollageVersionMode` 提供介面選擇。
+
+- 模式清單（摘要）：
+  - `kinship`：以邊緣顏色距離作貪婪匹配，偏好與已放置鄰居色彩接近者；局部縫合最佳。
+  - `luminance`：最小化亮度差（鄰居/基底）；產生強烈的明暗節律（垂直柱狀常見）。
+  - `wave`：由中心向外的 BFS 順序放置；形成方向性條帶。
+  - `source-cluster`：以來源圖為單位設置種子，對最近種子區域優先放同源 tile（同源加權）；會長出語義連續的大區塊。
+  - `random`：基準對照，僅保證種子重現性。
+
+耦合機制（由低到高）：
+- 低階：邊緣平均色、中心色、亮度分佈（對應 `compute_edge_colors`、`compute_tile_luminance`）。
+- 中階：局部紋理密度（由色差近似，尚未直接引入方向/頻譜）；在 wave/order 效應下產生條帶。
+- 高階（視覺辨識觀察）：裂紋/石面、深紅布料、乾草枝葉、光滑灰面、膚色手部、樹影等趨向成為可辨認的圖像母題，在 `source-cluster` 內聚成塊，在 `luminance` 中被亮度節奏化。
+
+對照樣本（同一父圖集合、12×16、seed=927322）：
+- `backend/offspring_images/offspring_20251108_231524_549.png`（kinship）
+- `backend/offspring_images/offspring_20251108_231542_136.png`（luminance）
+- `backend/offspring_images/offspring_20251108_231555_088.png`（random）
+- `backend/offspring_images/offspring_20251108_231501_329.png`（wave）
+- `backend/offspring_images/offspring_20251108_231510_992.png`（source-cluster）
+
+視覺樣貌（重點）：
+- 裂紋/石面：在 `source-cluster` 形成連續縱向帶；在 `luminance` 成為中亮度柱狀單元；在 `random` 破碎四散。
+- 深紅布料：在 `luminance` 被周期性插入為紅色節拍；在 `source-cluster` 可形成完整紅色區塊/帶。
+- 乾草/枝葉：`wave` 與 `kinship` 內沿條帶/鄰接逐步織入；`random` 無聚合。
+- 光滑灰面：由於「無鄰居時以灰為參考」的啟發式，`kinship` 與 `source-cluster` 早期插槽常出現大塊淺灰（如十字/角落）。
+
+連到前文（吸引子與系譜）：
+- 我們先前在第 17–18 節提出「吸引子（attractors）」與開放指標。新的拼貼模式提供「在單張內」觀察吸引子聚合的機制：
+  - `source-cluster` = 語彙在空間上被來源驅動而聚塊，對應「基因群落」的視覺化。
+  - `luminance` = 同一語彙被亮度節奏打散成韻律單元，利於估測明暗主旋律在系譜中的演化。
+  - `wave/kinship` = 以鄰接相容和順序造成「帶狀/縫合」吸引子。
+
+## 20. 可量測的耦合證據（實驗設計）
+
+為避免純主觀描述，建議在 `return_map=true` 取得 tile 對應後，計算下列指標：
+
+- 邊界縫合度（Seam Coherence）：沿每條 tile 邊取梯度差（Sobel/Scharr）之均值；越低代表縫合越好。
+- 來源純度（Source Homogeneity）：計算相鄰 tile 同源比例；`source-cluster` 應顯著高於其他模式。
+- 區塊一致性（Zone Consistency）：以同源鄰接做連通區，再算區內 Lab 方差與面積分佈；檢驗是否真有大區塊聚合。
+- 方向連續性（Orientation Coherence）：在 seam 上做結構張量/HoG 方向相似度，檢驗裂紋/樹影等方向紋理是否跨格延續。
+- 灰度啟動偏壓（Gray Bias Footprint）：統計前 N% 放置槽其中心 Lab 與中性點的距離；評估灰色大塊的成因與規模。
+
+再現協定（前端/後端）：
+- 透過 `POST /api/generate-collage-version` 指定 `mode`, `rows`, `cols`, `seed`, `return_map=true`。
+- 以同一 `image_names[]`、同一 `rows×cols`、同一 `seed`，只改 `mode`，生成五張對照。
+- 使用 `GET /api/collage-version/{task_id}/progress` 取得完成訊息與 `tile_mapping`；將 mapping 與指標結果寫入對應的 `metadata` 條目，便於系譜疊合。
+
+## 21. 針對模式的微調建議（保持風格，降低副作用）
+
+- `source-cluster`
+  - 同源加權：由 0.5 的乘數改為 0.7–0.85，並加入「跨源但 seam 分數更佳」的小額加分，讓邊界更自然。
+  - 種子選位：由幾何分區改為對 base 圖 Lab/紋理 k-means 後挑選質心，避免大塊淺灰十字。
+- `luminance`
+  - 次級色相約束：在亮度一致時，偏好色相距離較近者，減少純紅/純灰的周期性柱狀。
+- `wave`
+  - 前沿對齊：在前沿插值中加入邊緣方向相似度（orientation term），使條帶內紋理更順。
+- `kinship`
+  - 起始插槽灰偏壓：將「無鄰居時對灰」改為「對應 base tile 中心色」，或以退火方式逐步降低此權重。
+
+## 22. 與系譜視覺化的接合
+
+- metadata 擴展（已有）：`collage_params.mode/rows/cols/seed/...`。建議在 `return_map=true` 時新增：
+  - `tile_mapping`: `[ {row, col, source_image, source_row, source_col} ]`
+  - `zone_stats`: 依上節計算後寫回（可為簡要統計），供 lineage viewer 疊加高亮某一來源的佔比與區塊。
+- 視覺化提案：
+  - 前端疊層：滑桿切換顯示「來源著色」（同源著色相同顏色）、「縫合熱度圖」（seam error）。
+  - 系譜路徑：在展示某個父圖時，標出其在後代拼貼中的「佔比、區塊位置與形狀」。
+
+## 23. 後續工作與里程碑（延續第 18 節）
+
+1. 完成五模式×N 組父圖的固定參數對照庫，並產出上述四大指標（seam/同源/方向/灰偏）。
+2. 於 `backend/metadata` 為對照庫補寫 `zone_stats`，並在 viewer 端提供疊層檢視。
+3. 以吸引子角度回寫「圖像母題」標籤（裂路、紅布、乾草、樹影、手部），驗證在不同模式下的聚散趨勢。
+4. 以系譜為軸的場景編排：從某吸引子祖先→多模式後代→策展三分屏（聚塊/節律/縫合）。
+5. 規劃一個「模式建議器」：根據父圖組合的 Lab/紋理概況，自動推薦預設模式與參數（rows/cols/seed）。
