docs: sync collage and TTS specs with backend

--- a/docs/system_architecture/後端架構概論.md
+++ b/docs/system_architecture/後端架構概論.md
@@ -1,7 +1,7 @@
 # 後端架構概論（Backend Architecture Overview）
 
 > 狀態: 與現況程式碼同步  
-> 最後更新: 2025-10-23
+> 最後更新: 2025-11-04
 
 ---
 
@@ -33,13 +33,16 @@ backend/app/
 │   ├── image_analysis.py      # 圖像分析（OpenAI 視覺）
 │   ├── sound_effects.py       # 音效生成（ElevenLabs）
 │   ├── tts_openai.py         # 旁白 TTS（OpenAI Audio Speech）
+│   ├── collage_version.py     # 拼貼版本生成
+│   ├── collage_config.py      # 拼貼配置管理
 │   ├── screenshots.py         # 截圖上傳儲存
 │   ├── screenshot_requests.py # 截圖請求與 WebSocket 廣播
 │   ├── camera_presets.py      # 相機預設 CRUD
 │   └── iframe_config.py       # Iframe 多面板配置載入/儲存/解析
 ├── models/
 │   ├── schemas.py             # Pydantic 請求/回應模型
-│   └── iframe.py              # Iframe 模型/解析產物
+│   ├── iframe.py              # Iframe 模型/解析產物
+│   └── collage.py             # Collage 配置模型
 └── utils/
     ├── embeddings.py          # OpenAI 嵌入/視覺描述封裝
     ├── gemini_client.py       # Gemini 客戶端
@@ -117,6 +120,10 @@ backend/app/
   - `screenshot_completed` / `screenshot_failed`
   - `sound_play`：音效播放請求（可目標特定 `client_id`）
   - `sound_effect_ready`：音效生成完成（供前端 UI 顯示，可選）
+  - `iframe_config`：Iframe 配置更新
+  - `collage_config`：拼貼配置更新
+  - `subtitle_update`：字幕更新
+  - `caption_update`：說明文字更新
 
 ### 4.4 image_analysis.py / sound_effects.py（分析與音效）
 - 圖像分析：OpenAI `gpt-4o-mini` 生成 `summary` 與 `segments`
@@ -124,16 +131,48 @@ backend/app/
 
 ### 4.5 tts_openai.py（旁白 TTS）
 - 端點：`POST /api/tts`
-  - 請求：`{ text, instructions?, voice?, model?, output_format?, filename_base?, speed?, auto_play?, target_client_id? }`
-  - 行為：呼叫 OpenAI Audio Speech API → 寫入 `generated_sounds/` → 回傳 `{ tts: {...}, url }`
-  - 若 `auto_play=true`：透過 WebSocket 廣播 `sound_play` 給指定 `client_id`
-  - 可選：`speed`（0.25–4.0），控制語速（預設 1.0）；`instructions` 用於指定語氣/口音/說話風格
+- 請求：`{ text, instructions?, voice?, model?, output_format?, filename_base?, speed?, auto_play?, target_client_id? }`
+- 行為：呼叫 OpenAI Audio Speech API → 寫入 `generated_sounds/` → 回傳 `{ tts: {...}, url }`
+- 若 `auto_play=true`：透過 WebSocket 廣播 `sound_play` 給指定 `client_id`
+- 可選：`speed`（0.25–4.0），控制語速（預設 1.0）；`instructions` 用於指定語氣/口音/說話風格
+- 環境變數：
+  - `OPENAI_TTS_MODEL`（預設 `gpt-4o-mini-tts`）
+  - `OPENAI_TTS_VOICE`（預設 `alloy`）
+  - `OPENAI_TTS_FORMAT`（預設 `mp3`）
 - 綁定流程：
   - `POST /api/analyze-screenshot`
   - `POST /api/sound-effects`
   - `POST /api/screenshot/bundle`：分析 + 產音，一次完成並（若有）回寫到截圖請求紀錄
 
-### 4.5 camera_presets.py / iframe_config.py（視角與多面板）
+### 4.6 collage_version.py（拼貼版本生成）
+- 功能：將多張圖像切片後重新組合，產生新的拼貼版本
+- 匹配 / 處理模式：`kinship`、`luminance`、`wave`、`source-cluster`、`random`、`weave`、`rotate-90`
+- `allow_self=true` 或 `mode=rotate-90` 時允許單張圖；其餘模式需至少兩張圖
+- `base` 參數支援 `first` / `mean`（目前 `mean` 仍等同第一張）
+- 任務管理：`CollageTaskManager` 追蹤非同步生成進度
+- 端點：
+  - `POST /api/generate-collage-version`：建立生成任務（返回 `task_id`）
+  - `GET /api/collage-version/{task_id}/progress`：查詢進度與結果
+- 主要參數範圍：
+  - `rows`/`cols`：1-300（預設 12×16）
+  - `resize_w`: 256-8192 px（預設 2048）
+  - `pad_px`: 0-100；`jitter_px`: 0-50
+  - `rotate_deg`: 0-45 度
+  - `format`: `png`、`jpg`、`webp`；`quality` 僅在 `jpg/webp` 有效
+  - `return_map`: 控制是否回傳 tile mapping
+
+### 4.7 collage_config.py（拼貼配置管理）
+- 功能：管理拼貼模式的配置（圖像列表、網格參數等）
+- 儲存位置：
+  - 全域：`backend/metadata/collage_config.json`
+  - 客戶端專屬：`backend/metadata/collage_config__<client>.json`
+- 端點：
+  - `GET /api/collage-config?client=<id>`：取得配置（客戶端專屬或全域）
+  - `PUT /api/collage-config`：更新配置（可指定 `target_client_id`）
+- WebSocket 推送：更新後會廣播 `collage_config` 訊息
+- 配置參數：`images`, `image_count`, `rows`, `cols`, `mix`, `stage_width`, `stage_height`, `seed`
+
+### 4.8 camera_presets.py / iframe_config.py（視角與多面板）
 - 相機預設：`GET/POST/DELETE /api/camera-presets`（JSON 檔 `backend/metadata/camera_presets.json`）
 - Iframe 配置：
   - `GET /api/iframe-config`：可帶 `?client=<id>` 讀取指定客戶端配置（若無則預設）
@@ -169,6 +208,23 @@ backend/app/
   - `GET /api/sound-files`（列檔）
   - `GET /api/sound-files/{filename}`（串流）
   - `POST /api/sound-play`（廣播 `sound_play`）
+- TTS 旁白：
+  - `POST /api/tts`（產生 TTS 音訊）
+- 拼貼生成：
+  - `POST /api/generate-collage-version`（建立拼貼生成任務）
+  - `GET /api/collage-version/{task_id}/progress`（查詢進度）
+- 拼貼配置：
+  - `GET /api/collage-config`（取得配置）
+  - `PUT /api/collage-config`（更新配置）
+- 字幕與說明文字：
+  - `GET /api/subtitles`（取得字幕）
+  - `POST /api/subtitles`（設定字幕）
+  - `DELETE /api/subtitles`（清除字幕）
+  - `GET /api/captions`（取得說明文字）
+  - `POST /api/captions`（設定說明文字）
+  - `DELETE /api/captions`（清除說明文字）
+- 多客戶端管理：
+  - `GET /api/clients`（列出在線客戶端）
 - Iframe 配置：
   - `GET /api/iframe-config`
   - `PUT /api/iframe-config`
@@ -204,16 +260,19 @@ backend/app/
 ## 8. 缺漏與風險
 
 - CORS：目前未加入 `CORSMiddleware`，跨源開發（vite 5173 → api 8000）須手動設定；建議儘速補上
+  - **更新**：已加入 `CORSMiddleware`，允許所有來源（開發環境）
 - 向量策略註解不一致：`vector_store.py` 檔頭仍敘述 Google 來源；實際使用 OpenAI 嵌入，需修正文檔
 - 雙語索引：`cleanup_zh.py` 僅做清理；尚未正式產生 `:zh/:en` 版本向量
 - 持久化：截圖請求目前為記憶體資料結構；若需多實例/重啟存活，建議導入 DB
+- 拼貼任務管理：`CollageTaskManager` 為記憶體實作，任務在重啟後會遺失；建議持久化或改用外部任務佇列
 
 ---
 
 ## 9. Refactor 建議（後端）
 
 - 路由拆分：
-  - 以 FastAPI `APIRouter` 按領域分拆（search/index、kinship、screenshots、sounds、iframe、camera、generate）
+  - 以 FastAPI `APIRouter` 按領域分拆（search/index、kinship、screenshots、sounds、tts、collage、iframe、camera、generate）
+  - **更新**：已部分拆分為 `media_router`、`storage_router`、`realtime_router`
 - 設定與依賴：
   - 將 `Settings` 與外部客戶端（OpenAI/Chroma/Gemini）以 DI 方式注入，便於測試
 - CORS 與中介層：
